--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -9,7 +9,15 @@
             <input type="text" id="id_new_item" name="item_text" placeholder="Enter a to-do item">
         </form>
         <table id="id_list_table">
-            <tr><td>1: {{ new_item_text }}</td></tr>
+            <tr>
+                {% for new_item in new_items %}
+                
+                {% endfor %}
+                
+                <td>
+                    1: {{ new_item_text }}
+                </td>
+            </tr>
         </table>
     </body>
 </html>
