--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -9,15 +9,13 @@
             <input type="text" id="id_new_item" name="item_text" placeholder="Enter a to-do item">
         </form>
         <table id="id_list_table">
+             {% for item in items %}
             <tr>
-                {% for new_item in new_items %}
-                
-                {% endfor %}
-                
                 <td>
-                    1: {{ new_item_text }}
+                    {{forloop.counter}}: {{ item.text }}
                 </td>
             </tr>
+            {% endfor %}
         </table>
     </body>
 </html>
