--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -3,19 +3,10 @@
         <title>To-Do lists</title>
     </head>
     <body>
-        <h1>To-Do lists</h1>
-        <form action="" method="post">
+        <h1>Start a new To-Do list</h1>
+        <form action="/" method="post">
             {% csrf_token %}
             <input type="text" id="id_new_item" name="item_text" placeholder="Enter a to-do item">
         </form>
-        <table id="id_list_table">
-             {% for item in items %}
-            <tr>
-                <td>
-                    {{forloop.counter}}: {{ item.text }}
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
     </body>
 </html>
