--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Start a new To-Do list</h1>
-        <form action="/" method="post">
+        <form action="{% url 'new_list'%}" method="post">
             {% csrf_token %}
             <input type="text" id="id_new_item" name="item_text" placeholder="Enter a to-do item">
         </form>
