--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -4,6 +4,10 @@
     <title>To-Do lists</title>
 </head>
 <body>
+    <form action="{% url 'add_item' id=list.id %}" method="post">
+            {% csrf_token %}
+            <input type="text" id="id_new_item" name="item_text" placeholder="Enter a to-do item">
+        </form>
     <table id="id_list_table">
         {% for item in items %}
         <tr>
