--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -6,7 +6,7 @@
 {% block form_action %}{% url 'add_item' id=list.id %}{% endblock %}
 
 {% block table %}
-    <table id="id_list_table"> 
+    <table id="id_list_table" class="table">
     {% for item in items %}
         <tr><td>
             {{ forloop.counter }}: {{ item.text }}
