--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -3,11 +3,11 @@
 {% block header_text %}Your To-Do list{% endblock %}
 
 
-{% block form_action %}{% url 'add_item' id=list.id %}{% endblock %}
+{% block form_action %}{% url 'view_list' list_id=list.id %}{% endblock %}
 
 {% block table %}
     <table id="id_list_table" class="table">
-    {% for item in items %}
+    {% for item in list.item_set.all %}
         <tr><td>
             {{ forloop.counter }}: {{ item.text }}
         </td></tr>
