--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -6,67 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do lists</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
 </head>
 <body>
-<div class="container">
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Superlists</a>
-            <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
+    <div class="container">
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Superlists</a>
+                {% if user.email %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="navbar-text">Logged in as {{ user.email }}</li>
+                    <li><a href="#">Log out</a></li>
+                </ul>
+                {% else %}
+                <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
                 <span>Enter email to log in:</span>
-                <input class="form-control" name="email" type="text"/>
+                <input class="form-control" name="email" type="text" />
                 {% csrf_token %}
-            </form>
-        </div>
-    </nav>
-    {% if messages %}
+                </form>
+            {% endif %}
+            </div>
+        </nav>
+        {% if messages %}
         <div class="row">
             <div class="col-md-8">
-            {% for message in messages %}
-            {% if message.level_tag == 'success' %}
+                {% for message in messages %}
+                {% if message.level_tag == 'success' %}
                 <div class="alert alert-success">{{ message }}</div>
-            {% else %}
+                {% else %}
                 <div class="alert alert-warning">{{ message }}</div>
-            {% endif %}
-            {% endfor %}
+                {% endif %}
+                {% endfor %}
             </div>
         </div>
-    {% endif %}
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3 jumbotron">
-            <div class="text-center">
-                <h1>{% block header_text %}{% endblock %}</h1>
-                <form method="POST" action="{% block form_action %}{% endblock %}">
-                    {{ form.text }}
-                    {% csrf_token %}
-                    {% if form.errors %}
+        {% endif %}
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 jumbotron">
+                <div class="text-center">
+                    <h1>{% block header_text %}{% endblock %}</h1>
+                    <form method="POST" action="{% block form_action %}{% endblock %}">
+                        {{ form.text }}
+                        {% csrf_token %}
+                        {% if form.errors %}
                         <div class="form-group has-error">
                             <span class="help-block">{{ form.text.errors }}</span>
                         </div>
-                    {% endif %}
-                </form>
+                        {% endif %}
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            {% block table %}
-            {% endblock %}
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                {% block table %}
+                {% endblock %}
+            </div>
         </div>
-    </div>
-</div
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.7/js/bootstrap.min.js"
+        </div
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/2.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="{% static 'list.js' %}"></script>
-<script>
-    $(document).ready(() => initialize());
-</script>
-</body>
-</html>
+        <script src="{% static 'list.js' %}"></script>
+        <script>
+        $(document).ready(() => initialize());
+        </script>
+    </body>
+    </html>
