--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -17,17 +17,20 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Superlists</a>
                 {% if user.email %}
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="{% url 'my_lists' user.email %}">My lists</a></li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="navbar-text">Logged in as {{ user.email }}</li>
                     <li><a href="{% url 'logout' %}">Log out</a></li>
                 </ul>
                 {% else %}
                 <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
-                <span>Enter email to log in:</span>
-                <input class="form-control" name="email" type="text" />
-                {% csrf_token %}
+                    <span>Enter email to log in:</span>
+                    <input class="form-control" name="email" type="text" />
+                    {% csrf_token %}
                 </form>
-            {% endif %}
+                {% endif %}
             </div>
         </nav>
         {% if messages %}
@@ -47,6 +50,7 @@
             <div class="col-md-6 col-md-offset-3 jumbotron">
                 <div class="text-center">
                     <h1>{% block header_text %}{% endblock %}</h1>
+                    {% block list_form %}
                     <form method="POST" action="{% block form_action %}{% endblock %}">
                         {{ form.text }}
                         {% csrf_token %}
@@ -55,13 +59,20 @@
                             <span class="help-block">{{ form.text.errors }}</span>
                         </div>
                         {% endif %}
-                    </form>
+                    </form> 
+                    {% endblock list_form %}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 {% block table %}
+                {% endblock %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                {% block extra_content %}
                 {% endblock %}
             </div>
         </div>
@@ -76,4 +87,4 @@
         $(document).ready(() => initialize());
         </script>
     </body>
-    </html>
+</html>
